Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UPrimitiveComponent.h

	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnClient; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnClient_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnClient = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_GET(UPrimitiveComponent* Ptr) { return Ptr->AlwaysLoadOnServer; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_AlwaysLoadOnServer_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->AlwaysLoadOnServer = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDistanceFieldLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDistanceFieldLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDistanceFieldLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_GET(UPrimitiveComponent* Ptr) { return Ptr->bAffectDynamicIndirectLighting; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAffectDynamicIndirectLighting_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAffectDynamicIndirectLighting = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_GET(UPrimitiveComponent* Ptr) { return Ptr->bAllowCullDistanceVolume; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAllowCullDistanceVolume_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAllowCullDistanceVolume = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_GET(UPrimitiveComponent* Ptr) { return Ptr->bAlwaysCreatePhysicsState; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAlwaysCreatePhysicsState_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAlwaysCreatePhysicsState = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_GET(UPrimitiveComponent* Ptr) { return Ptr->bApplyImpulseOnDamage; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bApplyImpulseOnDamage_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bApplyImpulseOnDamage = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsDynamic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsDynamic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsDynamic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_GET(UPrimitiveComponent* Ptr) { return Ptr->bAttachedToStreamingManagerAsStatic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bAttachedToStreamingManagerAsStatic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bAttachedToStreamingManagerAsStatic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastCinematicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastCinematicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastCinematicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastCinematicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastDynamicShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastDynamicShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastDynamicShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastDynamicShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastFarShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastFarShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastFarShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastFarShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastHiddenShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastHiddenShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastHiddenShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastHiddenShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastInsetShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastInsetShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastInsetShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastInsetShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastShadowAsTwoSided; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastShadowAsTwoSided_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastShadowAsTwoSided = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastStaticShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastStaticShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastStaticShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastStaticShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->bCastVolumetricTranslucentShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCastVolumetricTranslucentShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCastVolumetricTranslucentShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bCheckAsyncSceneOnMove_GET(UPrimitiveComponent* Ptr) { return Ptr->bCheckAsyncSceneOnMove; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bCheckAsyncSceneOnMove_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bCheckAsyncSceneOnMove = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bForceMipStreaming_GET(UPrimitiveComponent* Ptr) { return Ptr->bForceMipStreaming; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bForceMipStreaming_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bForceMipStreaming = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bGenerateOverlapEvents_GET(UPrimitiveComponent* Ptr) { return Ptr->bGenerateOverlapEvents; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bGenerateOverlapEvents_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bGenerateOverlapEvents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_GET(UPrimitiveComponent* Ptr) { return Ptr->bHandledByStreamingManagerAsDynamic; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHandledByStreamingManagerAsDynamic_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHandledByStreamingManagerAsDynamic = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_GET(UPrimitiveComponent* Ptr) { return Ptr->bHasMotionBlurVelocityMeshes; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHasMotionBlurVelocityMeshes_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHasMotionBlurVelocityMeshes = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_GET(UPrimitiveComponent* Ptr) { return Ptr->bHasPerInstanceHitProxies; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bHasPerInstanceHitProxies_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bHasPerInstanceHitProxies = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bIgnoreRadialForce_GET(UPrimitiveComponent* Ptr) { return Ptr->bIgnoreRadialForce; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bIgnoreRadialForce_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bIgnoreRadialForce = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_GET(UPrimitiveComponent* Ptr) { return Ptr->bIgnoreRadialImpulse; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bIgnoreRadialImpulse_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bIgnoreRadialImpulse = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_GET(UPrimitiveComponent* Ptr) { return Ptr->bLightAsIfStatic_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bLightAsIfStatic_DEPRECATED_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bLightAsIfStatic_DEPRECATED = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_GET(UPrimitiveComponent* Ptr) { return Ptr->bLightAttachmentsAsGroup; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bLightAttachmentsAsGroup_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bLightAttachmentsAsGroup = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bMultiBodyOverlap_GET(UPrimitiveComponent* Ptr) { return Ptr->bMultiBodyOverlap; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bMultiBodyOverlap_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bMultiBodyOverlap = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UPrimitiveComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UPrimitiveComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}